// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expand not defined env 1`] = `"Env FOO_NOT_DEFINED is not defined"`;

exports[`extraResources - two-package 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`extraResources on Linux and Windows 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`extraResources on Linux and Windows 2`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "RELEASES",
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-full.nupkg",
    },
  ],
}
`;

exports[`extraResources on Linux and Windows 3`] = `
Array [
  "lib/net45/api-ms-win-core-console-l1-1-0.dll",
  "lib/net45/api-ms-win-core-datetime-l1-1-0.dll",
  "lib/net45/api-ms-win-core-debug-l1-1-0.dll",
  "lib/net45/api-ms-win-core-errorhandling-l1-1-0.dll",
  "lib/net45/api-ms-win-core-file-l1-1-0.dll",
  "lib/net45/api-ms-win-core-file-l1-2-0.dll",
  "lib/net45/api-ms-win-core-file-l2-1-0.dll",
  "lib/net45/api-ms-win-core-handle-l1-1-0.dll",
  "lib/net45/api-ms-win-core-heap-l1-1-0.dll",
  "lib/net45/api-ms-win-core-interlocked-l1-1-0.dll",
  "lib/net45/api-ms-win-core-libraryloader-l1-1-0.dll",
  "lib/net45/api-ms-win-core-localization-l1-2-0.dll",
  "lib/net45/api-ms-win-core-memory-l1-1-0.dll",
  "lib/net45/api-ms-win-core-namedpipe-l1-1-0.dll",
  "lib/net45/api-ms-win-core-processenvironment-l1-1-0.dll",
  "lib/net45/api-ms-win-core-processthreads-l1-1-0.dll",
  "lib/net45/api-ms-win-core-processthreads-l1-1-1.dll",
  "lib/net45/api-ms-win-core-profile-l1-1-0.dll",
  "lib/net45/api-ms-win-core-rtlsupport-l1-1-0.dll",
  "lib/net45/api-ms-win-core-string-l1-1-0.dll",
  "lib/net45/api-ms-win-core-synch-l1-1-0.dll",
  "lib/net45/api-ms-win-core-synch-l1-2-0.dll",
  "lib/net45/api-ms-win-core-sysinfo-l1-1-0.dll",
  "lib/net45/api-ms-win-core-timezone-l1-1-0.dll",
  "lib/net45/api-ms-win-core-util-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-conio-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-convert-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-environment-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-filesystem-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-heap-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-locale-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-math-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-multibyte-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-private-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-process-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-runtime-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-stdio-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-string-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-time-l1-1-0.dll",
  "lib/net45/api-ms-win-crt-utility-l1-1-0.dll",
  "lib/net45/blink_image_resources_200_percent.pak",
  "lib/net45/content_resources_200_percent.pak",
  "lib/net45/content_shell.pak",
  "lib/net45/d3dcompiler_47.dll",
  "lib/net45/ffmpeg.dll",
  "lib/net45/icudtl.dat",
  "lib/net45/libEGL.dll",
  "lib/net45/libGLESv2.dll",
  "lib/net45/LICENSE.electron.txt",
  "lib/net45/LICENSES.chromium.html",
  "lib/net45/msvcp140.dll",
  "lib/net45/natives_blob.bin",
  "lib/net45/node.dll",
  "lib/net45/pdf_viewer_resources.pak",
  "lib/net45/snapshot_blob.bin",
  "lib/net45/Test%20App%20%C3%9FW.exe",
  "lib/net45/Test%20App%20%C3%9FW_ExecutionStub.exe",
  "lib/net45/ucrtbase.dll",
  "lib/net45/ui_resources_200_percent.pak",
  "lib/net45/Update.exe",
  "lib/net45/vcruntime140.dll",
  "lib/net45/views_resources_200_percent.pak",
  "lib/net45/locales/en-US.pak",
  "lib/net45/resources/app.asar",
  "lib/net45/resources/electron.asar",
  "lib/net45/resources/platformSpecificR",
  "lib/net45/resources/bar/hello.txt",
  "lib/net45/resources/bar/x64.txt",
  "lib/net45/resources/dir-relative/f.txt",
  "lib/net45/resources/foo/nameWithoutDot",
  "lib/net45/resources/win/x64.txt",
  "TestApp.nuspec",
  "[Content_Types].xml",
  "_rels/.rels",
]
`;

exports[`extraResources on macOS 1`] = `
Object {
  "mac": Array [],
}
`;

exports[`files 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`files 2`] = `
Array [
  "index.html",
  "index.js",
  "package.json",
  "test.h",
  "dist/electron/foo.js",
  "app/readme.md",
  "app/package.json/readme.md",
]
`;

exports[`files.from asar 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`map resources 1`] = `
Object {
  "linux": Array [],
}
`;
